main-navbar-completed

--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
 
     <div id="top-header-nav-op">
         <img src="https://d2xamzlzrdbdbn.cloudfront.net/theme/d7b7b890-2ede-45ab-ad8b-c34da7514f8422080541.jpg" alt="">
+        <div>
+            
+            <a href="#">service app</a>
+            <a href="#">online order +91 7303434043</a>
+            <a href="#">contact us</a>
+            <a href="#">stores locater</a>
+            <a href="#">track locater</a>
+            <a href="#">deliver to mumbai 400001</a>
+        </div>
     </div>
 
     <div class="header" id="myHeader">
