--- a/slider.html
+++ b/slider.html
@@ -11,17 +11,17 @@
 body{
     background-size: cover;
     background-repeat: no-repeat;
-    animation: slider 5s infinite;
-    background-image: url("slidermg/sl1.JPG");
-    opacity: 0%;
+    animation: slider 15s infinite;
+    overflow: hidden;
 }
+
 
 @keyframes slider {
     0%{
         background-image: url("slidermg/sl1.JPG");
     }
     10%{
-        background-image: url("slidermg/sl1.JPG");
+        background-image: url("slidermg/sl2.JPG");
     }
     20%{
         background-image: url("slidermg/sl3.JPG");
@@ -29,12 +29,29 @@ body{
     30%{
         background-image: url("slidermg/sl1.JPG");
     }
+    40%{
+        background-image: url("slidermg/sl2.JPG");
+    }
     50%{
+        background-image: url("slidermg/sl3.JPG");
+    }
+    60%{
+        background-image: url("slidermg/sl1.JPG");
+    }
+    70%{
+        background-image: url("slidermg/sl2.JPG");
+    }
+    80%{
+        background-image: url("slidermg/sl3.JPG");
+    }
+    90%{
         background-image: url("slidermg/sl1.JPG");
     }
     100%{
-        background-image: url("slidermg/sl3.JPG");
+        background-image: url("slidermg/sl2.JPG");
     }
+    
+    
 }
 
 
