--- a/index.html
+++ b/index.html
@@ -1072,12 +1072,12 @@
 </div>
 
 
-<div>
+<div id="footer-last">
 <h1>
   Newsletter
 </h1>
 <p>Stay in touch with us, get product updates, offers, discounts directly to your inbox</p>
-<input type="text" placeholder="Please Provide Your Emaail Address">
+<input type="text" placeholder="Please Provide Your Email Address">
 <p>We'll never share your email address with a third party.
 </p>
 <h1>Follow us on </h1>
@@ -1095,6 +1095,124 @@
 <p>[ Mon To Sun : 10:00 AM To 6:00 PM ]</p>
 </div>
 
+</div>
+
+
+
+
+
+
+<div id="footer-2">
+<img src="https://d2xamzlzrdbdbn.cloudfront.net/imagesrewamp/freebies/vijay-sales-logo-white.png" alt="">
+<div>
+  <a href="#">agra</a>
+  <a href="#">ahmedabad</a>
+  <a href="#">aurangabad</a>
+  <a href="#">pune</a>
+  <a href="#">banglore</a>
+  <a href="#">Bhavandar</a>
+  <a href="#">chennai</a>
+  <a href="#">clmoboture</a>
+  <a href="#">delhi</a>
+  <a href="#">fridabad</a>
+  <a href="#">guregaaon</a>
+  <a href="#">hyderabad</a>
+  <a href="#">indarpuram</a>
+  <a href="#">indore</a>
+  <a href="#">jaipur</a>
+  <a href="#">kakinaopur</a>
+  <a href="#">kolhapur</a>
+  <a href="#">kolkata</a>
+  <a href="#">lucknow</a>
+  <a href="#">merrut</a>
+  <a href="#">mumbai</a>
+  <a href="#">mysore</a>
+  <a href="#">nagpur</a>
+  <a href="#">nashik</a>
+  <a href="#">navi mumbai</a>
+  <a href="#">noida</a>
+  <a href="#">palghar</a>
+  <a href="#">panipat</a>
+  <a href="#">patna</a>
+  <a href="#">rajamudanari</a>
+  <a href="#">Rajkot</a>
+  <a href="#">surat</a>
+  <a href="#">thane</a>
+<a href="#">tirupati</a>
+<a href="#">vadodra</a>
+<a href="#">vijayvada</a>
+<a href="#">vihakapatana</a>
+<a href="#">warangle</a>
+</div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+<div class="footer-3">
+  <img src="https://d2xamzlzrdbdbn.cloudfront.net/imagesrewamp/visa.png" alt="">
+  <img src="https://d2xamzlzrdbdbn.cloudfront.net/imagesrewamp/master-card.png" alt="">
+  <img src="https://d2xamzlzrdbdbn.cloudfront.net/imagesrewamp/amex-american-express.png" alt="">
+  <img src="https://d2xamzlzrdbdbn.cloudfront.net/imagesrewamp/pine-labs.png" alt="">
+  <img src="https://d2xamzlzrdbdbn.cloudfront.net/imagesrewamp/razorpay_tiny.png" alt="">
+</div>
+
+
+
+
+
+
+<div class="footer-4">
+  <p>WASHING MACHINESSemi AutomaticFully AutomaticDryersWasher Dryer ComboSamsungLGWhirlpoolBoschGodrejHaierIFBPanasonicSiemensAmstradCandyFully Automatic Top LoadSemi Automatic Top LoadFully Automatic Front LoadWasher with DryerSingle & CoupleFamily of 3Large Families6 Kg & Below6.1 Kg - 7 Kg7.1 Kg - 8 Kg8.1 Kg - 9 Kg9.1 Kg - 10 Kg10.1 Kg & Above6 KgFamily of 4Family of 5CoupleFront Loading
+
+  </p>
+
+
+  <p>
+    LAPTOP & PRINTERLaptopsDesktopsRefurbished LaptopsPrintersMonitorEntry LaptopsMainstream LaptopsPremium LaptopsGaming LaptopsConvertible Laptops2 in 1 LaptopsGraphic Performance LaptopsFull HD MonitorGaming MonitorHD MonitorAll in One DesktopsCPUiMacMac MiniMac StudioHard DisksBackpack & CasesPendrivesMouseRouterSoftwareKeyboards
+  </p>
+
+
+  <p>MOBILES & TABLETSiPhonesSmartphonesBasic PhonesTabletsiPadPower BanksChargersCablesCases & CoversMemory CardCar ChargerAdapterSmart Watches & BandsSmart Watch StrapsSmart Watch ChargerAirPodsAirPods ProAirPods MaxApple WatchAirTagsCases & CoversAdapters & CablesTWS (True Wireless Stereo Buds)NeckbandHeadphonesEarphonesPortable Speaker</p>
+
+  <p>TV & ENTERTAINMENTTelevisionsSoundbarSpeakerParty SpeakersHome TheaterSmart SpeakerMusic PlayerStreaming DeviceFloor StandAmplifierTraveling CaseSpeaker StandWall MountGaming TelevisionsPlayStationXboxControllerPlay Station GamesXbox GamesGift Card
+  </p>
+
+
+  <p>WASHING MACHINESSemi AutomaticFully AutomaticDryersWasher Dryer ComboSamsungLGWhirlpoolBoschGodrejHaierIFBPanasonicSiemensAmstradCandyFully Automatic Top LoadSemi Automatic Top LoadFully Automatic Front LoadWasher with DryerSingle & CoupleFamily of 3Large Families6 Kg & Below6.1 Kg - 7 Kg7.1 Kg - 8 Kg8.1 Kg - 9 Kg9.1 Kg - 10 Kg10.1 Kg & Above6 KgFamily of 4Family of 5CoupleFront Loading
+
+  </p>
+
+
+  <p>
+    LAPTOP & PRINTERLaptopsDesktopsRefurbished LaptopsPrintersMonitorEntry LaptopsMainstream LaptopsPremium LaptopsGaming LaptopsConvertible Laptops2 in 1 LaptopsGraphic Performance LaptopsFull HD MonitorGaming MonitorHD MonitorAll in One DesktopsCPUiMacMac MiniMac StudioHard DisksBackpack & CasesPendrivesMouseRouterSoftwareKeyboards
+  </p>
+
+
+  <p>MOBILES & TABLETSiPhonesSmartphonesBasic PhonesTabletsiPadPower BanksChargersCablesCases & CoversMemory CardCar ChargerAdapterSmart Watches & BandsSmart Watch StrapsSmart Watch ChargerAirPodsAirPods ProAirPods MaxApple WatchAirTagsCases & CoversAdapters & CablesTWS (True Wireless Stereo Buds)NeckbandHeadphonesEarphonesPortable Speaker</p>
+
+  <p>TV & ENTERTAINMENTTelevisionsSoundbarSpeakerParty SpeakersHome TheaterSmart SpeakerMusic PlayerStreaming DeviceFloor StandAmplifierTraveling CaseSpeaker StandWall MountGaming TelevisionsPlayStationXboxControllerPlay Station GamesXbox GamesGift Card
+  </p>
+
+
+</div>
+
+
+
+
+
+
+<div class="footer-last">
+  <h1>
+    ©  Made By AmarVcode
+  </h1>
 </div>
 </footer>
 
